@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.2 2002/02/18 15:14:24 seb Exp $
+@comment $NetBSD: PLIST,v 1.3 2003/06/09 09:02:28 uebayasi Exp $
 @unexec ${INSTALL_INFO} --delete %D/info/elisp %D/info/dir
 info/elisp
 info/elisp-1
@@ -44,4 +44,9 @@ info/elisp-40
 info/elisp-41
 info/elisp-42
 info/elisp-43
+info/elisp-44
+info/elisp-45
+info/elisp-46
+info/elisp-47
+info/elisp-48
 @exec ${INSTALL_INFO} %D/info/elisp %D/info/dir
