@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.2465 2003/06/09 07:47:30 martti Exp $
+$NetBSD: CHANGES,v 1.2466 2003/06/09 09:03:56 uebayasi Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -2387,3 +2387,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated naim to 0.11.5.9 [wiz 2003-06-08]
 	Updated dlcompat to 20030522 [schmonz 2003-06-08]
 	Updated mrtg to 2.9.29 [martti 2003-06-09]
+	Updated elisp-manual to 21.8 [uebayasi 2003-06-09]
